...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:id="@+id/mainactivity">

    <Button
        android:id="@+id/lm"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
...
