...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:id="@+id/registeractivity"
    >

    <Button
        android:id="@+id/rb"
        android:layout_width="100dp"
        android:layout_height="50dp"
...
        android:layout_marginBottom="80dp"
        android:background="#2196F3"
        android:text="Register"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/regi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
...
